--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       <a href="#about" class="smoothscroll">About</a>
       <a href="#portfolio" class="smoothscroll">Portfolio</a>
       <a href="#contact" class="smoothscroll">Contact</a>
-      <a href="#"><i class="fa fa-facebook"></i></a>
+      <!-- <a href="#"><i class="fa fa-facebook"></i></a> -->
       <a href="#"><i class="fa fa-twitter"></i></a>
-      <a href="#"><i class="fa fa-dribbble"></i></a>
-      <a href="#"><i class="fa fa-envelope"></i></a>
+      <!-- <a href="#"><i class="fa fa-dribbble"></i></a>
+      <a href="#"><i class="fa fa-envelope"></i></a> -->
     </div>
 
     <!-- Menu button -->
@@ -61,9 +61,9 @@
       </div>
       <br>
       <div class="row">
-        <h1>MINIMAL TEMPLATE</h1>
+        <h1>Aldrnari</h1>
         <br>
-        <h3>Hello, I'm Carlos. I love design.</h3>
+        <h3>This is definitely a test</h3>
         <br>
         <br>
         <div class="col-lg-6 col-lg-offset-3">
