--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
   <div id="headerwrap">
     <div class="container">
       <div class="logo">
-        <img src="img/logo.png">
+        <img height="50px" src="img/Symbol - Light.png">
       </div>
       <br>
       <div class="row">
-        <h1>Aldrnari</h1>
+        <!-- <h1>Aldrnari</h1> -->
         <br>
-        <h3>This is definitely a test</h3>
+        <!-- <h3>This is definitely a test</h3> -->
         <br>
         <br>
         <div class="col-lg-6 col-lg-offset-3">
@@ -79,16 +79,16 @@
   <div id="f">
     <div class="container">
       <div class="row">
-        <h3>ABOUT ME</h3>
+        <h3>ABOUT ALDRNARI</h3>
         <p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
 
-        <!-- INTRO INFORMATIO-->
+        <!-- INTRO INFORMATION-->
         <div class="col-lg-6 col-lg-offset-3">
-          <p>A full time theme crafter based in Madrid, Spain. I love designing beautiful, clean and user-friendly interfaces for websites.</p>
-          <p>My passion is turning good ideas and products into eye-catching sites.</p>
-          <p>Sometimes I blog about design and web trends. Also I share links and my thoughts on <a href="http://twitter.com/templatemag">Twitter</a>. Need a free handsome bootstrap theme? <a href="http://templatemag.com">Done!</a></p>
-          <p>I'm available for freelance jobs. Contact me now.</p>
-          <p><button type="button" class="btn btn-warning">I HAVE A FREELANCE JOB</button></p>
+          <p>A nordic themed, souls-inspired modlist for Skyrim Special Edition</p>
+          <p>Fueled by <a href="https://www.nexusmods.com/skyrimspecialedition/mods/21578">Yggdrasil Music and Sound FX Overhaul</a></p>
+          <!-- <p>Sometimes I blog about design and web trends. Also I share links and my thoughts on <a href="http://twitter.com/templatemag">Twitter</a>. Need a free handsome bootstrap theme? <a href="http://templatemag.com">Done!</a></p>
+          <p>I'm available for freelance jobs. Contact me now.</p> -->
+          <p><button type="button" class="btn btn-warning">Convinced? Download it today!</button></p>
         </div>
       </div>
     </div>
@@ -140,51 +140,12 @@
   <div id="f">
     <div class="container">
       <div class="row">
-        <h3>CONTACT ME</h3>
-        <p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
+        <h3>QUESTIONS</h3>
+        <!-- <p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p> -->
 
         <div class="col-lg-6 col-lg-offset-3">
-          <p>Some Avenue, 987<br/>Madrid, Spain<br/>+34 8984-4343</p>
-          <p>iam@awesomemail.com</p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-          <form class="contact-form php-mail-form" role="form" action="contactform/contactform.php" method="POST">
-
-            <div class="form-group">
-              <label for="contact-name">Your Name</label>
-              <input type="name" name="name" class="form-control" id="contact-name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" >
-              <div class="validate"></div>
-            </div>
-            <div class="form-group">
-              <label for="contact-email">Your Email</label>
-              <input type="email" name="email" class="form-control" id="contact-email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email">
-              <div class="validate"></div>
-            </div>
-            <div class="form-group">
-              <label for="contact-subject">Subject</label>
-              <input type="text" name="subject" class="form-control" id="contact-subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject">
-              <div class="validate"></div>
-            </div>
-
-            <div class="form-group">
-              <label for="contact-message">Your Message</label>
-              <textarea class="form-control" name="message" id="contact-message" placeholder="Your Message" rows="5" data-rule="required" data-msg="Please write something for us"></textarea>
-              <div class="validate"></div>
-            </div>
-
-            <div class="loading"></div>
-            <div class="error-message"></div>
-            <div class="sent-message">Your message has been sent. Thank you!</div>
-
-            <div class="form-send">
-              <button type="submit" class="btn btn-large">Send Message</button>
-            </div>
-
-          </form>
-
+          <p>Support channels in the following Discords:<br/>Wabbajack Discord<br/>Community Discord</p>
+          <!-- <p>iam@awesomemail.com</p> -->
         </div>
       </div>
     </div>
@@ -193,7 +154,7 @@
   <div id="copyrights">
     <div class="container">
       <p>
-        &copy; Copyrights <strong>Minimal</strong>. All Rights Reserved
+        Aldrnari is under MIT License<br/>&copy; Copyrights <strong>Minimal</strong>. All Rights Reserved
       </p>
       <div class="credits">
         <!--
